--- a/src/app/Admin/Meeting/add-slot/add-slot.component.html
+++ b/src/app/Admin/Meeting/add-slot/add-slot.component.html
@@ -1,1 +1,54 @@
-<p>add-slot works!</p>
+<div class="card">
+    <div class="card-header text-center">
+        <h3>Add Slot</h3>
+    </div>
+    <div class="card-body">
+        <form [formGroup]="addSlotForm">
+            <div class="row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                    <label>Date:</label>
+                    <input type="date" class="form-control" formControlName="date">
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                    <label>Start Time:</label>
+                    <input type="time" class="form-control" formControlName="startTime">
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                    <label>End Time</label>
+                    <input type="time" class="form-control" formControlName="endTime">
+                </div>
+            </div>
+
+        </form>
+        <div class="row mt-5">
+            <div class="col-12">
+                <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{slotId==0?'Save':'Update'}}</button>
+                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/meeting/slot-detail'" >Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Admin Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Meeting Slot Addition confirmation</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Confirm Meeting Slot Addition</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addSlot()">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
