--- a/src/app/Admin/Meeting/slots-detail/slots-detail.component.html
+++ b/src/app/Admin/Meeting/slots-detail/slots-detail.component.html
@@ -1,1 +1,81 @@
-<p>slots-detail works!</p>
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Meeting Slots Details</h3>
+    </div>
+    <div class="card-body">
+      <div class="row">
+          <div class="col-2">
+          </div>
+        <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
+            <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/admin/meeting/add-slot/0'" >Add Slot</button>
+        </div>
+        <div class="col-lg-4 col-md-3 col-sm-6 col-12">
+            <span class="input-group" style="float: right;">
+                <input type="date" class="form-control" placeholder="meeting" aria-label="date" aria-describedby="basic-addon1" [(ngModel)]="searchDate">
+                <button type="button" class="btn btn-outline-primary" style="float: left;"(click)="searchByDate()" >Search</button>
+            </span>
+        </div>
+        <div class="col-2">
+        </div>
+      </div>
+      <div class="row mt-5 mb-5">
+          <div class="col-2">
+
+          </div>
+        <div class="col-8">
+            
+            <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <table class="table">
+                        <thead  style="background-color: rgb(103, 186, 241);">
+                          <tr>
+                            <th scope="col">Date</th>
+                            <th scope="col">Start Time</th>
+                            <th scope="col">End Time</th>
+                            <th scope="col">Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr scope="col" *ngFor="let slot of slotData">
+                            <td scope="row">{{slot.date | date}}</td>
+                            <td scope="row">{{slot.startTime | date:'shortTime'}}</td>
+                            <td scope="row">{{slot.endTime | date:'shortTime'}}</td>
+                            <td scope="row">
+                                <button class="btn btn-outline-primary" (click)="editSlot(slot)" >View</button>
+                                <button class="btn btn-outline-primary"  data-bs-toggle="modal" data-bs-target="#deletionConfirmation" (click)="deleteSlot(slot)">Delete</button>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                  </div>
+                </div>
+              </div>
+
+        </div>
+        <div class="col-2">
+
+        </div>
+
+      </div>
+    </div>
+</div>
+
+<!-- Slot Deletion Confimation Model -->
+<div class="modal fade" id="deletionConfirmation" tabindex="-1" aria-labelledby="deletionConfirmationLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Slot Deletion confirmation</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Confirm Slot Deletion</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="confirmDeleteion()">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
