--- a/src/app/Employee/employee-detail/employee-detail.component.html
+++ b/src/app/Employee/employee-detail/employee-detail.component.html
@@ -1,1 +1,80 @@
-<p>employee-detail works!</p>
+<div class="card">
+  <div  class="card-header text-center">
+    <h3>Employee Detail</h3>
+  </div>
+  <div class="card-body">
+    <div class="row">
+        <div class="col-2">
+        </div>
+      <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
+          <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" (click)="addEmployee()">Add</button>
+      </div>
+      <div class="col-lg-4 col-md-3 col-sm-6 col-12">
+          <span class="input-group" style="float: right;">
+              <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" >
+    <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()" >Search</button>
+          </span>
+      </div>
+      <div class="col-2">
+      </div>
+    </div>
+    <div class="row mt-5 mb-5">
+        <div class="col-2">
+
+        </div>
+      <div class="col-8">
+          
+          <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <table class="table">
+                      <thead style="background-color: rgb(103, 186, 241);">
+                        <tr>
+                          <th scope="col">Initial</th>
+                          <th scope="col">Surname</th>
+                          <th scope="col">Actions</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let employee of employeesDetail">
+                          <td scope="row">{{employee.initials}}</td>
+                          <td scope="row">{{employee.surname}}</td>
+                          <td scope="row">
+                            <button class="btn btn-outline-primary" (click)="editEmployee(employee)">View</button>
+                            <button class="btn btn-outline-primary"  data-bs-toggle="modal" data-bs-target="#deletionConfirmation" (click)="deleteEmployee(employee)" >Delete</button>
+                            <button class="btn btn-primary" (click)="downloadDocument(employee)">Download Document</button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+              </div>
+            </div>
+
+      </div>
+      <div class="col-2">
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- Employee Deletion Confimation Model -->
+<div class="modal fade" id="deletionConfirmation" tabindex="-1" aria-labelledby="deletionConfirmationLabel" aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title">Employee Deletion confirmation</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+      <p>Confirm Employee Deletion</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="confirmDeleteion()">Yes</button>
+    </div>
+  </div>
+</div>
+</div>
