added add client and client profile methods

--- a/src/app/client-sub-system/client-profile/client-profile.component.html
+++ b/src/app/client-sub-system/client-profile/client-profile.component.html
@@ -1,1 +1,59 @@
-<p>client-profile works!</p>
+<div class="row">
+    <div class="card">
+      <div class="card-header ">
+        <h5>Client Profile</h5>
+      </div>
+      <div class="card-body">
+          <div class="row form-group">
+            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+              <h4>Initials:  <span><b>{{clientData.initials}}</b></span></h4>
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+              <h4>Surname:  <span><b>{{clientData.surname}}</b></span></h4>
+            </div>
+          </div>
+          <div class=" row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <h4>Email Address:  <span><b>{{clientData.email}}</b></span></h4>
+              </div>
+            </div>
+            <div class=" row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                  <h4>ID Number:  <span><b>{{clientData.idNumber}}</b></span></h4>
+              </div>
+            </div>
+      </div>
+    </div>
+  </div>
+
+  <div class=" row">
+    <div class="card">
+        <div class="card-header ">
+          <h5>Address details</h5>
+        </div>
+        <div class="card-body">
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <h4>Street Name: <span><b>{{clientData.streetName}}</b></span></h4>
+              </div>
+            </div>
+            <div class=" row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                  <h4>Street Number:  <span><b>{{clientData.streetNumber}}</b></span></h4>
+                </div>
+            </div>
+            <div class=" row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <h4>City Name:  <span><b>{{clientData.cityName}}</b></span></h4>
+                </div>
+            </div>
+            <div class=" row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                    <h4>City Code:  <span><b>{{clientData.cityCode}}</b></span></h4>
+                </div>
+            </div>
+        </div>
+      </div>            
+  </div>
