--- a/src/app/client-sub-system/add-client/add-client.component.html
+++ b/src/app/client-sub-system/add-client/add-client.component.html
@@ -1,1 +1,146 @@
-<p>add-client works!</p>
+<div class="card">
+  <div class="card-header text-center">
+    <h3>Add Client</h3>
+  </div>
+  <div class="card-body">
+
+    <div class="row">
+      <div class="card">
+        <div class="card-header">
+          <h5>Profile details</h5>
+        </div>
+        <div class="card-body">
+          <form [formGroup]="profileDetailForm">
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Username:</label>
+                <input type="text" class="form-control" placeholder="username" formControlName="userName">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Password:</label>
+                <input type="password" class="form-control" placeholder="username" formControlName="password">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Confirm Password:</label>
+                <input type="password" class="form-control" placeholder="username" formControlName="confirmPassword">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="card">
+        <div class="card-header ">
+          <h5>Client details</h5>
+        </div>
+        <div class="card-body">
+          <form [formGroup]="clientDetailForm">
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>User Type:</label>
+                <select name="" id="" class="form-control" formControlName="userTypeId">
+                  <option value="none">--Select User Type--</option>
+                  <option [value]="type.userTypeId" *ngFor="let type of userTypes">{{type.userTypeDescription}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Initials:</label>
+                <input type="text" class="form-control" placeholder="initials" formControlName="initials">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Surname:</label>
+                <input type="text" class="form-control" placeholder="surname" formControlName="surname">
+              </div>
+            </div>
+            <div class=" row form-group">
+                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                  <label>Email Address:</label>
+                  <input type="email" class="form-control" placeholder="email" formControlName="email">
+                </div>
+              </div>
+              <div class=" row form-group">
+                  <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                    <label>ID Number:</label>
+                    <input type="text" class="form-control" placeholder="Id number" formControlName="idNumber">
+                </div>
+              </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class=" row">
+                    <div class="card">
+                      <div class="card-header ">
+                        <h5>Address details</h5>
+                      </div>
+                      <div class="card-body">
+                        <form [formGroup]="addressDetailForm">
+                          <div class="row form-group">
+                            <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                              <label>Street Name:</label>
+                              <input type="text" class="form-control" placeholder="street name" formControlName="streetName">
+                            </div>
+                          </div>
+                          <div class=" row form-group">
+                              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                <label>Street Number:</label>
+                                <input type="number" class="form-control" placeholder="street number" formControlName="streetNumber">
+                              </div>
+                            </div>
+                            <div class=" row form-group">
+                                <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                  <label>City Name:</label>
+                                  <input type="text" class="form-control" placeholder="city name" formControlName="cityName">
+                                </div>
+                              </div>
+                              <div class=" row form-group">
+                                  <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                                    <label>City Code:</label>
+                                    <input type="text" class="form-control" placeholder="city code" formControlName="cityCode">
+                                  </div>
+                                </div>
+                        </form>
+                      </div>
+                    </div>
+    </div>
+
+
+    <div class=" row mt-5">
+      <div class="col-12">
+        <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{clientId==0?'Save':'Update'}}</button>
+        <button type="button" class="btn btn-secondary" style="float: right;"[routerLink]="'/client/list'" >Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Client Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Client Addition confirmation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Confirm Client Addition</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitAddClientForm()">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
