--- a/src/app/user-sub-system/login/login.component.html
+++ b/src/app/user-sub-system/login/login.component.html
@@ -1,1 +1,52 @@
-<p>login works!</p>
+
+<div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-8">
+        
+<div class="card mt-5">
+    <div  class="card-header text-center">
+      <h3>Login Screen</h3>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-2">
+            </div>
+            <div class="col-8">
+                <form [formGroup]="loginForm">
+                    <div class="row form-group">
+                      <div class=" col-12">
+                          <label >Username:</label>
+                          <input type="text" class="form-control" placeholder="username" formControlName="userName">
+                      </div>
+                    </div>
+                    <div class="row form-group">
+                      <div class=" col-12">
+                          <label >Password:</label>
+                          <input type="password" class="form-control" placeholder="Password" formControlName="password">
+                      </div>
+                    </div>
+                </form>
+        
+            </div>
+            <div class="col-2">
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-4">
+                <button type="button" class="btn btn-primary"  [routerLink]="'/signup'" >Signup</button>
+            </div>
+            <div class="col-4">
+                <button type="button" class="btn btn-primary"  [routerLink]="'/reset/initial'" >Reset Password</button>
+            </div>
+            <div class="col-4">
+                <button type="button" class="btn btn-primary"  (click)="login()">Login</button>
+            </div>
+        </div>
+    </div>
+  </div>
+
+    </div>
+    <div class="col-2">
+    </div>
+</div>
