added home comp html

--- a/src/app/Home/home/home.component.html
+++ b/src/app/Home/home/home.component.html
@@ -1,1 +1,55 @@
-<p>home works!</p>
+<div class="card ">
+    <div  class="card-header text-center">
+      <h3>Home</h3>
+    </div>
+    <div class="card-body">
+      <div class="row mt-5 mb-5">
+          <div class="col-2">
+
+          </div>
+        <div class="col-12">
+            
+            <div class="card">
+                <div class="card-body">
+
+                    <h1>Welcome to Louman Farms!</h1>
+                    <img src="C:\Users\User\Downloads\WhatsApp Image 2021-08-02 at 10.23.02.jpeg" >
+                    
+                    <h2>About us </h2>
+                    <p>Here at Louman Farms we ensure that all our focus is placed on produce quality, and most importantly our customers satisfaction . 
+                    <br><br> Louman Farms offers selling vegetables to wholesales as well as retail shops though markets as well as directly to the public. </p>
+
+                    <h2>Our History </h2>
+                    <p> Louman Farms is a large vegetable farm that has been operating for over 25 years.<br><br>
+                     The family owned business was established in 1992 by Louis Borrageiro as a small business with very few employees. The business started off by selling and making wooded crates in conjunction with selling vegetables.
+
+​
+
+As the business grew the farm changed locations to accommodate for possible future growth. <br><br>Over the years the business continued to expand rapidly and now occupies over 600 hectors in land in Mpumalanga and is owed and run by brothers Louis Borrageiro and Albert Borrageiro.
+
+​
+
+Along with business growth, many job opportunities were created as Louman currently employs over 150 experienced people.
+
+​
+
+As the farm expanded so did its client base.<br><br>
+Today, Louman Farms is a well-known reliable brand for their quality in produce that supplies various wholesalers and retailers all over South Africa.</p>
+
+<h2>Contact us </h2>
+<p> Louis Borrageiro <br>
+Cell number:0843694844 <br>
+Email: laborr@vodamail.co.za <br><br>
+
+Submit further enquiries through our website  </p>
+                </div>
+              </div>
+
+        </div>
+        <div class="col-2">
+
+        </div>
+
+      </div>
+    </div>
+  </div>
