added employee teams screen

--- a/src/app/Employee/employee-team-detail/employee-team-detail.component.html
+++ b/src/app/Employee/employee-team-detail/employee-team-detail.component.html
@@ -1,1 +1,93 @@
-<p>employee-team-detail works!</p>
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Add Team</h3>
+    </div>
+    <div class="card-body">
+      
+        <div class="row">
+            <div class="card">
+                <div  class="card-header">
+                  <h5>Team details</h5>
+                </div>
+                <div class="card-body">
+                  <form action="">
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Team Name:</label>
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Team Description:</label>
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Location:</label>
+                        </div>
+                      </div>
+
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Start Date:</label>
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >End Date</label>
+                        </div>
+                      </div>
+                      <div class="row form-group">
+                        <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                            <label >Maximum Employees</label>
+                        </div>
+                      </div>
+
+                  </form>
+                </div>
+              </div>
+        </div>
+
+        <div class="card">
+            <div  class="card-header text-center">
+              <h3>Employee Details:</h3>
+            </div>
+            <div class="card-body">
+              <div class="row mt-5 mb-5">
+                  <div class="col-2">
+        
+                  </div>
+                <div class="col-8">
+                    
+                    <div class="card">
+                        <div class="card-body">
+                          <div class="row">
+                            <table class="table">
+                                <thead  style="background-color: rgb(103, 186, 241);">
+                                  <tr>
+                                    <th scope="col">Initial</th>
+                                    <th scope="col">Surname</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td scope="row">Sp</td>
+                                    <td scope="row">Myers</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                          </div>
+                        </div>
+                      </div>
+        
+                </div>
+                <div class="col-2">
+        
+                </div>
+        
+              </div>
+            </div>
+          </div>
+
+    </div>
+  </div>
