--- a/src/app/Employee/employee-teams/employee-teams.component.html
+++ b/src/app/Employee/employee-teams/employee-teams.component.html
@@ -1,1 +1,43 @@
-<p>employee-teams works!</p>
+
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Employees Teams</h3>
+    </div>
+    <div class="card-body">
+      <div class="row mt-5 mb-5">
+          <div class="col-2">
+
+          </div>
+        <div class="col-8">
+            
+            <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <table class="table">
+                        <thead  style="background-color: rgb(103, 186, 241);">
+                          <tr>
+                            <th scope="col">Team</th>
+                            <th scope="col">Location</th>
+                            <th scope="col">Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td scope="row">Team3</td>
+                            <td scope="row">Delmas.MP</td>
+                            <td scope="row"><button class="btn btn-outline-primary">View</button></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                  </div>
+                </div>
+              </div>
+
+        </div>
+        <div class="col-2">
+
+        </div>
+
+      </div>
+    </div>
+  </div>
