--- a/src/app/order-sub-system/order-product/order-product/order-product.component.html
+++ b/src/app/order-sub-system/order-product/order-product/order-product.component.html
@@ -1,1 +1,89 @@
-<p>order-product works!</p>
+<div class="card">
+    <div  class="card-header text-center">
+      <h3>Products</h3>
+    </div>
+    <div class="card-body">
+      <div class="row">
+          <div class="col-2">
+          </div>
+        <div class="col-lg-4 col-md-3 col-sm-6 col-12">
+            <span class="input-group" style="float: right;">
+                <input type="text" class="form-control" placeholder="Search By Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
+            </span>
+        </div>
+        <div class="col-2">
+        </div>
+      </div>
+      <div class="row mt-5 mb-5">
+          <div class="col-2">
+            <p><b>Filter by Size</b></p>
+            <ul>
+              <li><a [routerLink] (click)="filterBySize('all')">All</a></li>
+              <li *ngFor="let size of sizeData"><a [routerLink] (click)="filterBySize(size)">{{size.productSizeDescription}}</a></li>
+            </ul>
+
+            <p><b>Filter by Type</b></p>
+            <ul>
+              <li><a [routerLink] (click)="filterByType('all')">All</a></li>
+              <li *ngFor="let type of typeData"><a [routerLink] (click)="filterByType(type)">{{type.productTypeName}}</a></li>
+            </ul>
+          </div>
+        <div class="col-8">
+            
+            <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                      <div class="col-lg-3 col-md-3 col-sm-3 mt-5" *ngFor="let product of productData | filter:searchTerm">
+                        <div class="card" >
+                            <img [src]="product.productImage" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">{{product.productName}}</h5>
+                              <p class="card-text"><b>Type: </b>{{product.productTypeName}}</p>
+                              <p class="card-text"><b>Size: </b>{{product.productSizeDescription}}</p>
+                              <a href="#" class="btn btn-primary" (click)="addToCart(product)" data-bs-toggle="modal" data-bs-target="#additionConfirmation">Add To Cart</a>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+
+        </div>
+        <div class="col-2">
+
+        </div>
+
+      </div>
+    </div>
+    <div class=" row mt-5">
+      <div class="col-12">
+        <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;" [routerLink]="'/client/cart'">Go to Cart</button>
+      </div>
+    </div>
+  </div>
+
+
+      <!-- Admin Deletion Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Product Deletion confirmation</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row form-group">
+            <div class="col-12">
+              <label >Quantity:</label>
+              <input type="number" class="form-control" placeholder="0" [value]="productQuantity" [(ngModel)]="productQuantity">
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="confirmAddToCart()">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
